--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Calum J McDonald</title>
+    <title>Calum McDonald</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -34,3 +34,81 @@
 
   </head>
 
+  <body id="page-top">
+
+    <!-- Colours
+        #CC30C5 -- pink
+        #ffffa3 -- yellow
+    -->
+    
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Leah K. Morabito</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#about">Welcome</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#research">Research</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#qualifications">Qualifications & CV</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#advocacy">Advocacy</a>
+            </li>
+	    <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <header class="masthead text-center text-white d-flex">
+      <div class="container my-auto">
+        <div class="row">
+          <div class="col-lg-10 mx-auto">
+            <h1 class="text-uppercase">
+		    <strong><h11>Dr. Leah K. Morabito</h11></strong>
+            </h1>
+            <hr>
+          </div>
+          <div class="col-lg-8 mx-auto">
+		  <p class="text-white mb-5" style="font-weight:bold"><h11>Radio Astronomer and UKRI Future Leaders Fellow <br> Durham University</h11></p>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Welcome</a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <section class="bg-primary" id="about">
+      <div class="container">
+<!--        <div class="row"> 
+          <div class="col-lg-8 mx-auto text-center"> -->
+            <h2 class="section-heading text-white text-center">Welcome</h2>
+            <hr class="light my-4">
+            <p class="text-light my-4 text-center">
+
+Welcome
+
+</p>
+           <!--- <a class="btn btn-light btn-xl js-scroll-trigger" href="#research">Research</a> --->
+          </div>
+<!--        </div> 
+      </div> -->
+    </section>
+
+
+  </body>
+
+</html>
