--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Leah K. Morabito</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Calum McDonald</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -58,7 +58,7 @@
               <a class="nav-link js-scroll-trigger" href="#research">Research</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#qualifications">Qualifications & CV</a>
+              <a class="nav-link js-scroll-trigger" href="#qualifications">CV</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#advocacy">Advocacy</a>
@@ -79,12 +79,12 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-		    <strong><h11>Dr. Leah K. Morabito</h11></strong>
+		    <strong><h11>Calum McDonald</h11></strong>
             </h1>
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-		  <p class="text-white mb-5" style="font-weight:bold"><h11>Radio Astronomer and UKRI Future Leaders Fellow <br> Durham University</h11></p>
+		  <p class="text-white mb-5" style="font-weight:bold"><h11> Photovoltaics <br> AIST</h11></p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Welcome</a>
           </div>
         </div>
