--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Calum McDonald</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Calum McDonald, PhD</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -58,10 +58,10 @@
               <a class="nav-link js-scroll-trigger" href="#research">Research</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#qualifications">CV</a>
+              <a class="nav-link js-scroll-trigger" href="#qualifications">Publications</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#advocacy">Advocacy</a>
+              <a class="nav-link js-scroll-trigger" href="#advocacy">News</a>
             </li>
 	    <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a>
@@ -95,7 +95,7 @@
       <div class="container">
 <!--        <div class="row"> 
           <div class="col-lg-8 mx-auto text-center"> -->
-            <h2 class="section-heading text-white text-center">Welcome</h2>
+            <h2 class="section-heading text-white text-center">Site under development.</h2>
             <hr class="light my-4">
             <p class="text-light my-4 text-center">
 
