--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Calum McDonald</title>
+    <title>Calum McDonald, PhD</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -45,7 +45,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Calum McDonald, PhD</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top"> _page_top_ </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -95,7 +95,7 @@
       <div class="container">
 <!--        <div class="row"> 
           <div class="col-lg-8 mx-auto text-center"> -->
-            <h2 class="section-heading text-white text-center">Site under development.</h2>
+            <h2 class="section-heading text-white text-center">Site currently under development!</h2>
             <hr class="light my-4">
             <p class="text-light my-4 text-center">
 
