--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
               <a class="nav-link js-scroll-trigger" href="#research">Research</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#qualifications">Publications</a>
+              <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#advocacy">News</a>
+              <a class="nav-link js-scroll-trigger" href="#news">News</a>
             </li>
 	    <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a>
@@ -79,7 +79,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-		    <strong><h11>Calum McDonald</h11></strong>
+		    <strong><h11>Calum McDonald, PhD</h11></strong>
             </h1>
             <hr>
           </div>
@@ -95,11 +95,11 @@
       <div class="container">
 <!--        <div class="row"> 
           <div class="col-lg-8 mx-auto text-center"> -->
-            <h2 class="section-heading text-white text-center">Site currently under development!</h2>
+            <h2 class="section-heading text-white text-center"> text </h2>
             <hr class="light my-4">
             <p class="text-light my-4 text-center">
 
-Welcome
+Site currently under development!
 
 </p>
            <!--- <a class="btn btn-light btn-xl js-scroll-trigger" href="#research">Research</a> --->
