--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('https://imgur.com/a/hl4WLuD');
+  background-image: url('PXL_20210615_064321349.PORTRAIT.jpg');
   min-height: 100%;
 }
 
