--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('PXL_20210615_064321349.PORTRAIT.jpg');
+  background-image: url('IMG_20191216_095131.jpg');
   min-height: 100%;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("/w3images/parallax2.jpg");
+  background-image: url("PXL_20210615_064321349.PORTRAIT.jpg");
   min-height: 400px;
 }
 
