--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@ body, html {
 
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
-  <h3 class="w3-center">ABOUT ME</h3>
   <h3 class="w3-center">Postdoctoral Researcher at AIST</h3>
     <p class="w3-center"><em>This website is still in development :)</em></p>
   <p>Research interests in photovoltaics, particularly perovskite and quantum dot solar cells.</p>
@@ -110,7 +109,7 @@ body, html {
 <!-- Second Parallax Image with Portfolio Text -->
 <div class="bgimg-2 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
-    <span class="w3-xxlarge w3-text-white w3-wide">PORTFOLIO</span>
+    <span class="w3-xxlarge w3-text-white w3-wide">RESEARCH</span>
   </div>
 </div>
 
