--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body, html {
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url('IMG_20191216_095131.jpg');
+  background-image: url('PXL_20210615_064035296.jpg');
   min-height: 400px;
 }
 
